# deepinv

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  API.html  CHANGELOG.rst  CITATION.cff  CNAME  CONTRIBUTING.md  IntroDeepInverse.ipynb  LICENSE  LSMR_PR_REVIEW.md  MAINTAINERS.md  MANIFEST.in  NOTICE  README.md  README.rst  SECURITY.md  TODO_Mambo.md  Untitled.ipynb  blind_dps_test.ipynb  changelog.html  cmrxreconslicedataset_cache.pkl  community.html  config_denoising.yaml  config_sr.yaml  contributing.html  debug.py  deepinv.contributing.html  deepinv.datasets.html  deepinv.denoisers.html  deepinv.iterative.html  deepinv.loss.html  deepinv.metric.html  deepinv.multigpu.html  deepinv.notation.html  deepinv.optim.html  deepinv.other_models.html  deepinv.physics.html  deepinv.sampling.html  (+25 more)
.circleci/: config.yml
.doctrees/: API.doctree  changelog.doctree  community.doctree  contributing.doctree  deepinv.contributing.doctree  deepinv.datasets.doctree  deepinv.denoisers.doctree  deepinv.iterative.doctree  deepinv.loss.doctree  deepinv.metric.doctree  deepinv.multigpu.doctree  deepinv.notation.doctree  deepinv.optim.doctree  deepinv.other_models.doctree  deepinv.physics.doctree  deepinv.sampling.doctree  deepinv.transform.doctree  deepinv.unfolded.doctree  deepinv.utils.doctree  finding_help.doctree  index.doctree  miccai-2026.doctree  quickstart.doctree  sg_execution_times.doctree  user_guide.doctree
.doctrees/__intersphinx_cache__/: deepinv_objects.inv  parallelproj_objects.inv  python_objects.inv  requests_objects.inv  torch_objects.inv
.doctrees/api/: deepinv.datasets.doctree  deepinv.distributed.doctree  (+10 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  codecov.yml  pull_request_template.md  workflows.md  workflows_summary.md
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
_modules/: index.html
_sources/: API.rst.txt  changelog.rst.txt  community.rst.txt  contributing.rst.txt  deepinv.denoisers.rst.txt  deepinv.iterative.rst.txt  deepinv.optim.rst.txt  deepinv.other_models.rst.txt  deepinv.physics.rst.txt  deepinv.sampling.rst.txt  deepinv.transform.rst.txt  deepinv.unfolded.rst.txt  index.rst.txt  miccai-2026.rst.txt  sg_execution_times.rst.txt  user_guide.rst.txt
_static/: custom.css  documentation_options.js
api/: deepinv.datasets.html  deepinv.distributed.html  deepinv.loss.html  deepinv.metric.html  deepinv.models.html  deepinv.optim.html  deepinv.physics.html  deepinv.sampling.html  deepinv.training.html  deepinv.transform.html  deepinv.unfolded.html  deepinv.utils.html
auto_examples/: index.html  sg_execution_times.html
deepinv/: README.md  __about__.py  __init__.py  __main__.py  training_utils.py  version.py
deepinv_repo/: .gitignore  README.rst
dev/: 3c353_gdth.npy  MULTI_GPU_GUIDE.md  SLURM_SETUP_README.md  briggs_weight.npy  demo_multi_gpu.py  dist_forward_example.sh  distributed_forward.py  example_ddp.py  example_distrib_framework.py  example_pnp_distrib.py  example_prior_distrib.py  example_radio_distrib_framework.py  example_radio_pnp_multiprior.py  reconstruction_summary.txt  sandbox.py  slurm_example.sh  test_distrib.py  test_distributed.py  utils.py  uv_coordinates.npy
docs/: Makefile
examples/: README.rst  demo_20221013.py  demo_20221101.py  demo_20221121_mbp.py  demo_20221230.py  demo_DEQ.py  demo_PnP_DPIR_deblur.py  demo_RED_GSPnP_SR.py  demo_Unfolded_PnP_SR.py  demo_ct.py  demo_custom_prior.py  demo_dataset.py  demo_denoising.py  demo_dpir_deblur.py  demo_gspnp_deblur.py  demo_gspnp_poisson_deblur.py  demo_gspnp_sr.py  demo_moi.py  demo_pdnet.py  demo_pdnet_DEBUG.py  demo_pnp.py  demo_pnp_bm3d.py  demo_pnp_cs.py  demo_pnp_deblur.py  demo_proxpnp_sr.py  demo_red.py  demo_sampling.py  demo_test.py  demo_train.py  demo_train_inpainting.py  demo_unfolded.py  demo_unrolled_cs_test.py  demo_unrolled_cs_train.py  demo_unrolled_pnp.py  test.py
experimental/: demo_gradient_descent.ipynb  demo_icassp25.ipynb  demo_phase_retrieval.ipynb  demo_pnp_pr.ipynb  denoiser_time.ipynb  device.py  df_pseudorandom_cpu.csv  df_pseudorandom_gpu.csv  df_random_gpu.csv  figure_random.ipynb  figure_random.py  general_tests.ipynb  playground.ipynb  prototype.ipynb  pseudorandom.ipynb  res_gd_rand.npy  structuredrandom.ipynb  test.py  time_complexity.py  time_test copy.ipynb  time_test.ipynb  visualization.ipynb  visulization.ipynb
paper/: paper.bib  paper.md
pr-607/: .buildinfo  contributing.html  finding_help.html  objects.inv  searchindex.js  sg_execution_times.html
pytest/: pyvenv.cfg
stubs/: deepinv.Trainer.html  deepinv.datasets.CBSD68.html  deepinv.datasets.DIV2K.html  deepinv.datasets.FMD.html  deepinv.datasets.FastMRISliceDataset.html  deepinv.datasets.Flickr2kHR.html  deepinv.datasets.HDF5Dataset.html  deepinv.datasets.LidcIdriSliceDataset.html  deepinv.datasets.LsdirHR.html  deepinv.datasets.PatchDataset.html  deepinv.datasets.Set14HR.html  deepinv.datasets.Urban100HR.html  deepinv.datasets.generate_dataset.html  deepinv.loss.Artifact2ArtifactLoss.html  deepinv.loss.BaseLossScheduler.html  deepinv.loss.EILoss.html  deepinv.loss.FNEJacobianSpectralNorm.html  deepinv.loss.InterleavedEpochLossScheduler.html  deepinv.loss.InterleavedLossScheduler.html  deepinv.loss.JacobianSpectralNorm.html  deepinv.loss.LPIPS.html  deepinv.loss.Loss.html  deepinv.loss.LpNorm.html  deepinv.loss.MCLoss.html  deepinv.loss.MOEILoss.html  deepinv.loss.MOILoss.html  deepinv.loss.MSE.html  deepinv.loss.NIQE.html  deepinv.loss.NMSE.html  deepinv.loss.Neighbor2Neighbor.html  deepinv.loss.PSNR.html  deepinv.loss.Phase2PhaseLoss.html  deepinv.loss.R2RLoss.html  deepinv.loss.RandomLossScheduler.html  deepinv.loss.SSIM.html  deepinv.loss.ScoreLoss.html  deepinv.loss.SplittingLoss.html  deepinv.loss.StepLossScheduler.html  deepinv.loss.SupLoss.html  deepinv.loss.SureGaussianLoss.html  (+194 more)
temp/: adversarial.rst  consistency.py  deepinv.models.rst  demo_splitting_mri.py  gan.py
train_denoise/: .gitignore  README.md  check_dataloader.py  check_equivariance.py  check_model.py  train.py  train_denoise.py
utils/: logger.py  metric.py  nn.py  plotting.py
(+5610 files in other folders)
