[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "deepinv"
authors = [{name="DeepInverse maintainers (see https://github.com/deepinv/deepinv/blob/main/MAINTAINERS.md)"}]
license = "BSD-3-Clause"
description = "DeepInverse: a PyTorch library for imaging with deep learning"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
version = "0.3.6"
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "torch>=2.2.0",
    "torchvision",
    "torchmetrics",
    "einops",
    "requests",
    "h5py",
    "natsort",
]

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.packages]
find = { where = ["."] }

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://deepinv.github.io/"
Source = "https://github.com/deepinv/deepinv"
Tracker = "https://github.com/deepinv/deepinv/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "coverage",
]

doc = [
    "sphinx",
    "sphinx_gallery",
    "pydata_sphinx_theme",
    "sphinxemoji",
    "sphinx_copybutton",
    "sphinx_autoapi",
    "sphinx-design",
    "sphinx_sitemap<2.7.0",
    "sphinxcontrib.bibtex"
]

lint = [
    "black",
    "ruff"
]

# optional dependencies for specific denoisers, physics or transforms
denoisers = [
    "bm3d",
    "bm4d<4.2.4",
    "timm",
    "PyWavelets",
    "ptwt",
    "FrEIA",
    "pyiqa",
    "kornia",
    "torchkbnufft",
    "libcpab",
    "sigpy",
    "astra-toolbox>=2.2.0,!=2.3.0; platform_system=='Linux'",
    "spyrit>=3.0.0; platform_system=='Linux'",
]

# optional dependencies for specific datasets
dataset = [
    "datasets",
    "pandas",
    "pydicom",
    "mat73",
    "scipy",
    "nibabel",
    "rasterio",
    "blosc2",
]

# optional dependencies for training
training = [
    "wandb",
    "mlflow",
]



#####################################################################
# Pytest configuration and coverage reporting

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "deepinv/tests",
]
markers = [
    "slow",
]

[tool.coverage.run]
branch = true
omit = ['examples/*', 'deepinv/tests']  # define paths to omit

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if self.mlflow_vis",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["UP006", "F401", "B905", "B006", "RUF008", "RUF012", "TID253", "UP004", "A005", "UP007", "UP045", "FA100", "FA102", "TID251", "N805", "E402"]

[tool.ruff.lint.per-file-ignores]
# NOTE: Rule F401 is ruff's unused imports rule.
"__init__.py" = ["F401"]
"deepinv/__init__.py" = ["E402"]
"examples/**/*" = ["TID253", "E402"]

[tool.ruff.lint.flake8-tidy-imports]
# Modules that slow down startup and should be imported lazily
banned-module-level-imports = ["timm", "torchmetrics", "matplotlib", "datasets", "FrEIA", "bm3d", "einops", "wandb", "pandas", "kornia", "ptwt", "pywt", "astra", "torchkbnufft"]

# Deprecated functions that should be replaced
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"torch.norm".msg = "Use torch.linalg.vector_norm, torch.linalg.matrix_norm or torch.linalg.norm instead of the deprecated torch.norm"
