[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "deepinv"
authors = [{name="DeepInverse maintainers (see https://github.com/deepinv/deepinv/blob/main/MAINTAINERS.md)"}]
license = { text = "BSD-3-Clause" }
description = "DeepInverse: a PyTorch library for imaging with deep learning"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
version = "0.4.0"
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "torch>=2.2.0",
    "torchvision",
    "torchmetrics",
    "einops",
    "requests",
    "h5py",
    "natsort",
    "torch_geometric",
    "torch-cluster",
]

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.packages]
find = { where = ["."] }

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://deepinv.github.io/"
Source = "https://github.com/deepinv/deepinv"
Tracker = "https://github.com/deepinv/deepinv/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "coverage",
    "pytest-testmon",
]

doc = [
    "sphinx",
    "sphinx_gallery",
    "pydata_sphinx_theme",
    "sphinxemoji",
    "sphinx_copybutton",
    "sphinx_autoapi",
    "sphinx-design",
    "sphinx_sitemap<2.7.0",
    "sphinxcontrib.bibtex",
    "nbformat",
]

lint = [
    "black",
    "ruff"
]

# optional dependencies for specific denoisers, or transforms
denoisers = [
    "bm3d",
    "bm4d<4.2.4",
    "timm",
    "PyWavelets",
    "ptwt",
    "FrEIA",
    "kornia",
    "libcpab",
    "scipy",
    "diffusers",
    "transformers",
    "numba>=0.60.0",
]

# optional dependencies for advanced forward operators
physics = [
    "astra-toolbox>=2.2.0,!=2.3.0; platform_system=='Linux'",
    "spyrit>=3.0.0; platform_system=='Linux'",
    "torchkbnufft",
    "array_api_compat",
    "sigpy",
]

# optional dependencies for specific datasets
dataset = [
    "datasets",
    "pandas",
    "pydicom",
    "mat73",
    "scipy",
    "nibabel",
    "rasterio",
    "blosc2",
]

# optional dependencies for training
training = [
    "wandb",
    "mlflow",
]

##############################################################
# Pixi configuration for managing conda optional dependencies
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.dependencies] # install from conda-forge for all environments
pytorch = "*"
torchvision = "*"
python = ">=3.10"

# fix python version for the docs environment to avoid issues with Sphinx and Python 3.14
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.dataset.dependencies]
datasets = ">=3.5.0"

[tool.pixi.pypi-dependencies] # install from PyPI for all environments
deepinv = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
docs = { features = ["doc", "dataset", "denoisers", "physics", "training", "py312"], solve-group = "docs" }
doctest = { features = ["doc", "test", "dataset", "denoisers", "physics", "training", "py312"], solve-group = "docs" }
full = { features = ["test", "dataset", "denoisers", "physics", "training"], solve-group = "default" }

##############################################
# Pytest configuration and coverage reporting

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "deepinv/tests", # main test directory
    "deepinv", # for doctests in the codebase
]
markers = [
    "slow",
]

[tool.coverage.run]
branch = false
omit = ['examples/*', 'deepinv/tests']  # define paths to omit

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if self.mlflow_vis",
]

##############################################
# Ruff configuration for linting and import management

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["UP006", "F401", "B905", "B006", "RUF008", "RUF012", "TID253", "UP004", "A005", "UP007", "UP045", "FA100", "FA102", "TID251", "N805", "E402", "F821", "F822", "F823"]

[tool.ruff.lint.per-file-ignores]
# NOTE: Rule F401 is ruff's unused imports rule.
"__init__.py" = ["F401"]
"deepinv/__init__.py" = ["E402"]
"examples/**/*" = ["TID253", "E402"]

[tool.ruff.lint.flake8-tidy-imports]
# Modules that slow down startup and should be imported lazily
banned-module-level-imports = ["timm", "torchmetrics", "matplotlib", "datasets", "FrEIA", "bm3d", "einops", "wandb", "pandas", "kornia", "ptwt", "pywt", "astra", "torchkbnufft"]

# Deprecated functions that should be replaced
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"torch.norm".msg = "Use torch.linalg.vector_norm, torch.linalg.matrix_norm or torch.linalg.norm instead of the deprecated torch.norm"

