[metadata]
classifiers =
    Development Status :: Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Utilities
    Topic :: Software Development :: Libraries
    
description = toolkit for solving inverse problems with deep learning
download_url = https://github.com/deepinv/deepinv.git
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
license = BSD (3-clause)
maintainer = Julian Tachella
maintainer_email = julian.tachella@ens-lyon.fr
name = deepinv
platforms = any

[options]
include_package_data = True
packages = find:
install_requires =
    numpy
    torch
    matplotlib
    pygithub
    torchvision
    psutil
    fastmri
    pyyaml
    pyarrow
    bm3d
    git+https://github.com/fbcotter/pytorch_wavelets@master#egg=pytorch_wavelets
project_urls =
    Documentation = https://deepinv.github.io/
    Source = https://github.com/deepinv/deepinv
    Tracker = https://github.com/deepinv/deepinv/issues

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-timeout
    coverage

doc =
    numpydoc
    sphinx==4.5.0
    sphinx-bootstrap-theme
    sphinx-click
    sphinx_gallery
    sphinx-prompt

[coverage:run]
branch = True
# omit = examples/*,src/db/versions/*  # define paths to omit

[coverage:report]
show_missing = True
skip_covered = True